[gd_scene load_steps=33 format=2]

[ext_resource path="res://scripts/in_game_hud.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/HUD/heart_life.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/HUD/mobile_ui/control_ui_#g15002.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/HUD/life_bar.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/HUD/life_bar_rim.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/HUD/shield_inner.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/HUD/shield_outer.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/HUD/shield_display_improved.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/HUD/mobile_ui/mob_ui_#g19060.png" type="Texture" id=9]
[ext_resource path="res://misc/dpad/textures/d_pad_locus_touch.png" type="Texture" id=11]
[ext_resource path="res://misc/dpad/textures/d_pad_locus_touch_norm.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/HUD/pausebutton_pressed.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/HUD/pause_button_#g24401.png" type="Texture" id=14]
[ext_resource path="res://misc/joystick/textures/joystick_locus_knob.png" type="Texture" id=15]
[ext_resource path="res://misc/joystick/textures/joystick_locus_outline.png" type="Texture" id=16]
[ext_resource path="res://misc/joystick/virtual_joystick.gd" type="Script" id=17]
[ext_resource path="res://assets/ui/HUD/mobile_ui/control_ui_#path12638-6.png" type="Texture" id=18]
[ext_resource path="res://assets/ui/HUD/mobile_ui/mob_ui_#g19082.png" type="Texture" id=19]
[ext_resource path="res://assets/ui/HUD/mobile_ui/mob_ui_#g19066.png" type="Texture" id=20]
[ext_resource path="res://assets/ui/HUD/mobile_ui/control_ui_#circle19078.png" type="Texture" id=21]
[ext_resource path="res://assets/ui/HUD/mobile_ui/control_ui_#path12640-7.png" type="Texture" id=22]
[ext_resource path="res://assets/ui/HUD/mobile_ui/next_#g31777.png" type="Texture" id=23]
[ext_resource path="res://assets/ui/HUD/mobile_ui/next_#g31765.png" type="Texture" id=24]

[sub_resource type="DynamicFontData" id=14]
font_path = "res://assets/fonts/American Captain.otf"

[sub_resource type="DynamicFont" id=15]
font_data = SubResource( 14 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://assets/fonts/American Captain.otf"

[sub_resource type="DynamicFont" id=17]
size = 18
font_data = SubResource( 16 )

[sub_resource type="DynamicFontData" id=18]
font_path = "res://assets/fonts/American Captain.otf"

[sub_resource type="DynamicFont" id=19]
font_data = SubResource( 18 )

[sub_resource type="Theme" id=20]
Button/fonts/font = SubResource( 15 )
CheckBox/fonts/font = null
CheckButton/fonts/font = null
ColorPickerButton/fonts/font = null
Fonts/fonts/large = null
Fonts/fonts/normal = SubResource( 17 )
GraphNode/fonts/title_font = null
ItemList/fonts/font = null
Label/fonts/font = SubResource( 19 )
LineEdit/fonts/font = null
LinkButton/fonts/font = null
MenuButton/fonts/font = null
OptionButton/fonts/font = null
PopupMenu/fonts/font = null
PopupMenu/fonts/font_separator = null
ProgressBar/fonts/font = null
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = null
TabContainer/fonts/font = null
Tabs/fonts/font = null
TextEdit/fonts/font = null
ToolButton/fonts/font = null
TooltipLabel/fonts/font = null
Tree/fonts/font = null
Tree/fonts/title_button_font = null
WindowDialog/fonts/title_font = null

[sub_resource type="DynamicFontData" id=21]
font_path = "res://assets/fonts/American Captain.otf"

[sub_resource type="DynamicFont" id=22]
size = 70
font_data = SubResource( 21 )

[node name="InGameHud" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ -96.0 ]
}

[node name="shield" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.490196 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true

[node name="highscore_counter" type="Label" parent="."]
modulate = Color( 0.898039, 0.94902, 0.992157, 1 )
anchor_left = 0.0958333
anchor_top = 0.0945313
anchor_right = 0.216667
anchor_bottom = 0.15
margin_bottom = -15.0
theme = SubResource( 20 )
custom_fonts/font = SubResource( 22 )
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="health_guage_hearts" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 120.0
margin_right = 212.0
margin_bottom = 198.0

[node name="AnimatedSprite" type="Sprite" parent="health_guage_hearts"]
visible = false
position = Vector2( 32, 48 )
scale = Vector2( 0.727127, 0.609415 )
texture = ExtResource( 2 )

[node name="AnimatedSprite2" type="Sprite" parent="health_guage_hearts"]
visible = false
position = Vector2( 200, 48 )
scale = Vector2( 0.727127, 0.609415 )
texture = ExtResource( 2 )

[node name="AnimatedSprite3" type="Sprite" parent="health_guage_hearts"]
position = Vector2( 376, 48 )
scale = Vector2( 0.727127, 0.609415 )
texture = ExtResource( 2 )

[node name="health_guage" type="TextureProgress" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -672.0
margin_top = 160.0
margin_right = -253.0
margin_bottom = 189.0
value = 55.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="shield_status" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -432.0
margin_top = 192.0
margin_right = -256.0
margin_bottom = 232.0

[node name="shield1" type="Control" parent="shield_status"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0

[node name="active" type="Sprite" parent="shield_status/shield1"]
visible = false
position = Vector2( 14, 26.1666 )
scale = Vector2( 0.0833333, 0.0833333 )
texture = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="rim" type="Sprite" parent="shield_status/shield1"]
position = Vector2( 14, 26.1666 )
scale = Vector2( 0.0833333, 0.0833333 )
texture = ExtResource( 7 )

[node name="shield2" type="Control" parent="shield_status"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="active" type="Sprite" parent="shield_status/shield2"]
visible = false
position = Vector2( 14, 26.1666 )
scale = Vector2( 0.0833333, 0.0833333 )
texture = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="rim" type="Sprite" parent="shield_status/shield2"]
position = Vector2( 14, 26.1666 )
scale = Vector2( 0.0833333, 0.0833333 )
texture = ExtResource( 7 )

[node name="shield3" type="Control" parent="shield_status"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -20.0
margin_bottom = 20.0

[node name="active" type="Sprite" parent="shield_status/shield3"]
visible = false
position = Vector2( 14, 26.1666 )
scale = Vector2( 0.0833333, 0.0833333 )
texture = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="rim" type="Sprite" parent="shield_status/shield3"]
position = Vector2( 14, 26.1666 )
scale = Vector2( 0.0833333, 0.0833333 )
texture = ExtResource( 7 )

[node name="mobile_controls" type="CanvasLayer" parent="."]

[node name="directions" type="Control" parent="mobile_controls"]
modulate = Color( 0.968627, 0.776471, 0.956863, 0.462745 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -292.0
margin_top = -416.0
margin_bottom = 416.0

[node name="rect" type="TextureRect" parent="mobile_controls/directions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -340.0
margin_right = 69.0
margin_bottom = 404.0
texture = ExtResource( 3 )
expand = true

[node name="right" type="TouchScreenButton" parent="mobile_controls/directions/rect"]
position = Vector2( 47, 87 )
scale = Vector2( 0.1264, 0.1264 )
normal = ExtResource( 22 )
pressed = ExtResource( 20 )
passby_press = true
action = "ui_right"

[node name="left" type="TouchScreenButton" parent="mobile_controls/directions/rect"]
position = Vector2( 47, 271 )
scale = Vector2( 0.1264, 0.1264 )
normal = ExtResource( 18 )
pressed = ExtResource( 9 )
passby_press = true
action = "ui_left"

[node name="accept" type="TouchScreenButton" parent="mobile_controls/directions/rect"]
position = Vector2( 40, 440 )
scale = Vector2( 0.111758, 0.111758 )
normal = ExtResource( 21 )
pressed = ExtResource( 19 )
passby_press = true
action = "ui_up"

[node name="accept_dialogue" type="TouchScreenButton" parent="mobile_controls/directions/rect"]
visible = false
position = Vector2( 40, 554 )
scale = Vector2( 0.111758, 0.111758 )
normal = ExtResource( 21 )
pressed = ExtResource( 19 )
passby_press = true
action = "ui_down"

[node name="shooter" type="Control" parent="mobile_controls"]
modulate = Color( 0.894118, 0.670588, 0.882353, 0.705882 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -620.0
margin_right = 929.584
margin_bottom = 620.0
__meta__ = {
"_edit_group_": true
}

[node name="shoot" type="TouchScreenButton" parent="mobile_controls/shooter"]
position = Vector2( 285.584, 336 )
scale = Vector2( 0.874418, 0.874418 )
normal = ExtResource( 16 )
action = "shoot"

[node name="pause" type="Control" parent="mobile_controls"]
visible = false
modulate = Color( 0.894118, 0.670588, 0.882353, 0.705882 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -240.0

[node name="pause" type="TouchScreenButton" parent="mobile_controls/pause"]
modulate = Color( 0.721569, 0.560784, 0.709804, 1 )
position = Vector2( 80, 64 )
rotation = 0.261799
scale = Vector2( 1.27778, 1.72308 )
normal = ExtResource( 14 )
pressed = ExtResource( 13 )
action = "pause"

[node name="dpad" type="Control" parent="mobile_controls"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -391.5
margin_right = 851.0
margin_bottom = 391.5

[node name="up" type="TouchScreenButton" parent="mobile_controls/dpad"]
position = Vector2( 512, 35.5 )
scale = Vector2( 0.870871, 0.907285 )
normal = ExtResource( 12 )
pressed = ExtResource( 11 )
passby_press = true
action = "ui_up"

[node name="down" type="TouchScreenButton" parent="mobile_controls/dpad"]
position = Vector2( 512, 475.5 )
scale = Vector2( 0.870871, 0.907285 )
normal = ExtResource( 12 )
pressed = ExtResource( 11 )
passby_press = true
action = "ui_down"

[node name="left" type="TouchScreenButton" parent="mobile_controls/dpad"]
position = Vector2( 208, 275.5 )
scale = Vector2( 0.870871, 0.907285 )
normal = ExtResource( 12 )
pressed = ExtResource( 11 )
passby_press = true
action = "ui_left"

[node name="right" type="TouchScreenButton" parent="mobile_controls/dpad"]
position = Vector2( 819, 275.5 )
scale = Vector2( 0.870871, 0.907285 )
normal = ExtResource( 12 )
pressed = ExtResource( 11 )
passby_press = true
action = "ui_right"

[node name="virtual_joystick" type="Control" parent="mobile_controls"]
modulate = Color( 0.894118, 0.670588, 0.882353, 0.705882 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1011.0
margin_top = -628.0
margin_bottom = 612.0
script = ExtResource( 17 )
__meta__ = {
"_edit_group_": true
}
pressed_color = Color( 0, 0.796078, 0.92549, 0.388235 )
deadzone_size = 1.0
clampzone_size = 70.0
visibility_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="Base" type="TextureRect" parent="mobile_controls/virtual_joystick"]
anchor_left = 0.5
anchor_top = 0.554
anchor_right = 0.5
anchor_bottom = 0.554
margin_left = -207.0
margin_top = -220.722
margin_right = 207.0
margin_bottom = 198.278
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 16 )
expand = true
stretch_mode = 6

[node name="Tip" type="TextureRect" parent="mobile_controls/virtual_joystick/Base"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -106.0
margin_right = 106.0
margin_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 106.5, 103.5 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="music_changer" type="Control" parent="mobile_controls"]
visible = false
modulate = Color( 0.894118, 0.670588, 0.882353, 0.705882 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -224.0
margin_right = 280.0

[node name="change_music" type="TouchScreenButton" parent="mobile_controls/music_changer"]
modulate = Color( 0.721569, 0.560784, 0.709804, 1 )
position = Vector2( 94.5127, 88.3057 )
rotation = -0.261799
scale = Vector2( 0.216663, 0.251291 )
normal = ExtResource( 23 )
pressed = ExtResource( 24 )
passby_press = true
action = "music_knob"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
